Fix alignment in about.html.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -193,6 +193,7 @@ body {
 .contributors .dummy {
     flex: 1;
     margin: 10px;
+    padding: 9px;
 }
 /* blockquoute */
 
